--- a/apis/oss-web/templates/index.html
+++ b/apis/oss-web/templates/index.html
@@ -1,43 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-	<title>OSS web直传</title>
-	<link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+    <title>OSS web direct upload</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/style.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body>
 
-<h2>OSS web直传---在服务端php签名, OSS会在文件上传成功，回调用户设置的回调url</h2>
+<h2>OSS web direct upload---Signing in php on the server side, OSS will call back the callback url set by the user when
+    the file is uploaded successfully</h2>
 <ol>
-<li>基于plupload封装 </li>
-<li>支持html5,flash,silverlight,html4 等协议上传</li>
-<li>可以运行在PC浏览器，手机浏览器，微信</li>
-<li>签名在服务端(php)完成, 安全可靠, 推荐使用!</li>
-<li>显示上传进度条</li>
-<li>可以控制上传文件的大小,允许上传文件的类型,本例子设置了，只能上传jpg,png,gif结尾和zip,rar文件，最大大小是10M</li>
-<li>最关键的是，让你10分钟之内就能移植到你的系统，实现以上牛逼的功能！</li>
-<li>注意一点:bucket必须设置了Cors(Post打勾）,不然没有办法上传</li>
-<li>注意一点:此例子默认是上传到user-dir目录下面，这个目录的设置是在php/get.php, $dir变量!</li>
-<li>注意一点:把php/get.php里面的callbackUrl变量改成你自己的url</li>
-<li>注意一点:这里返回的success,是OSS已经回调应用服务器，应用服务已经返回200!</li>
-<li><a href="https://help.aliyun.com/document_detail/oss/practice/pc_web_upload/js_php_callback.html">点击查看详细文档</a></li>
+    <li>Based on plupload package</li>
+    <li>Support html5,flash,silverlight,html4 and other protocols for uploading</li>
+    <li>Can run on PC browser, mobile browser, WeChat</li>
+    <li>Signature is done on the server (php), safe and reliable, recommended!</li>
+    <li>Show upload progress bar</li>
+    <li>You can control the size of the uploaded file and allow the type of the uploaded file. In this example, only
+        jpg, png, gif endings and zip, rar files can be uploaded, and the maximum size is 10M
+    </li>
+    <li>The most important thing is that you can transplant it to your system within 10 minutes and realize the above
+        awesome functions!
+    </li>
+    <li>Note: the bucket must be set with Cors (Post tick), otherwise there is no way to upload</li>
+    <li>Note: This example is uploaded to the user-dir directory by default. The setting of this directory is in
+        php/get.php, $dir variable!
+    </li>
+    <li>Note: Change the callbackUrl variable in php/get.php to your own url</li>
+    <li>Note: the success returned here is that the OSS has called back the application server, and the application
+        service has returned 200!
+    </li>
+    <li><a href="https://help.aliyun.com/document_detail/oss/practice/pc_web_upload/js_php_callback.html">Click to view
+        detailed document</a></li>
 </ol>
 <br>
 <form name=theform>
-<input type="radio" name="myradio" value="local_name" checked=true/> 上传文件名字保持本地文件名字
-<input type="radio" name="myradio" value="random_name" /> 上传文件名字是随机文件名, 后缀保留
+    <input type="radio" name="myradio" value="local_name" checked=true/> upload file name keeps local file name
+    <input type="radio" name="myradio" value="random_name"/> The upload file name is a random file name, the suffix is
+    ​​reserved
 </form>
 
-<h4>您所选择的文件列表：</h4>
-<div id="ossfile">你的浏览器不支持flash,Silverlight或者HTML5！</div>
+<h4>List of files you have selected:</h4>
+<div id="ossfile">Your browser does not support flash, Silverlight or HTML5!</div>
 
 <br/>
 
 
 <div id="container">
-	<a id="selectfiles" href="javascript:void(0);" class='btn'>选择文件</a>
-	<a id="postfiles" href="javascript:void(0);" class='btn'>开始上传</a>
+    <a id="selectfiles" href="javascript:void(0);" class='btn'>Select files</a>
+    <a id="postfiles" href="javascript:void(0);" class='btn'>Start uploading</a>
 </div>
 
 <pre id="console"></pre>
